--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.58.0
+kiwisolver==1.4.8
+matplotlib==3.10.3
+narwhals==1.39.1
 numpy==2.2.5
+packaging==25.0
 pandas==2.2.3
+pillow==11.2.1
+plotly==6.1.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+scipy==1.15.3
+seaborn==0.13.2
 six==1.17.0
 tzdata==2025.2
